--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item  active" data-bs-interval="10000">
-                        <div class="row bg-info p-3 d-flex align-items-center bg-gradient">
+                        <div class="row bg-info p-5 d-flex align-items-center  bg-gradient">
                             <div class="col-lg-7">
                                 <h1>Cool Dude Headphone</h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -55,7 +55,7 @@
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <div class="row bg-info p-3 d-flex align-items-center bg-gradient">
+                        <div class="row bg-info p-5 d-flex align-items-center bg-gradient">
                             <div class="col-lg-7">
                                 <h1>Mega LED TV For Sports</h1>
                                 <p>This is the best TV in the world for people who just want to waste time in
@@ -94,6 +94,32 @@
                     </button>
                 </div>
         </section>
+
+
+        <main>
+            <section class="container my-5">
+                    <div class="row g-4">
+                      <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 bg-warning d-flex align-items-center justify-content-between rounded-3">
+                            <h1 class="text-white">Watch</h1>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 bg-success d-flex align-items-center justify-content-between rounded-3">
+                            <h1 class="text-white">Bag</h1>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                      </div>
+                      <div class="col-lg-4 col-md-6 col-12">
+                        <div class="p-3 bg-primary d-flex align-items-center justify-content-between rounded-3">
+                            <h1 class="text-white">Shoes</h1>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                      </div>
+                      
+            </section>
+        </main>
 
 
 
