--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </section>
             <section class="container">
                 <h2>Shoes</h2>
-                <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                     <div class="col">
                       <div class="card border-0 shadow-lg  h-100">
                         <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -156,10 +156,51 @@
                     </div>
                   </div>
             </section>
+            <section class="container mt-5">
+                <h2>Backpack</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
+                      <div class="card border-0 shadow-lg  h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Red Laltu Bag</h5>
+                          <h1>$120</h1>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                          <button class="text-white rounded m-3 bg-danger border p-2">Buy Now >></button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Blue Niltu Bag</h5>
+                          <h1>$320</h1>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                          <button class="text-white rounded bg-danger m-3  border p-2">Buy Now >></button>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Black Kaltu Bag</h5>
+                          <h1>$350</h1>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                          <button class="text-white rounded bg-danger m-3 border p-2">Buy Now >></button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+            <section class="container">
+              <h1>LET'S STAY IN TOUCH</h1>
+              <p>Get updates on sales, specials and more</p>
+              <input type="text" placeholder="your email">
+              <button>Submit</button>
+            </section>
         </main>
-
-
-
     </header>
     <script src="js/bootstrap.min.js"></script>
 </body>
