--- a/index.html
+++ b/index.html
@@ -194,11 +194,15 @@
                     </div>
                   </div>
             </section>
-            <section class="container">
-              <h1>LET'S STAY IN TOUCH</h1>
-              <p>Get updates on sales, specials and more</p>
-              <input type="text" placeholder="your email">
-              <button>Submit</button>
+
+            <section style="height: 300px;" class="container mt-5 d-flex justify-content-center bg-info align-items-center">
+              <div >
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input type="text" placeholder="your email">
+                <br>
+                <button class="btn btn-warning">Submit</button>
+              </div>
             </section>
         </main>
     </header>
