--- a/index.html
+++ b/index.html
@@ -205,6 +205,10 @@
               </div>
             </section>
         </main>
+        <footer class="mt-5 text-center">
+          <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+
+        </footer>
     </header>
     <script src="js/bootstrap.min.js"></script>
 </body>
